# SFML-Snake

./: .gitignore  CMakeLists.txt  Resources.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
fields/: SnakeSectionStatusField.cpp  SnakeSectionStatusField.h
fields/base/: BaseEnumField.h  BaseField.h
gameElements/: Apple.cpp  Apple.h
gameElements/snake/: SnakeModel.cpp  SnakeModel.h  SnakePiece.cpp  SnakePiece.h
managers/: FieldManager.cpp  FieldManager.h  GameManager.cpp  GameManager.h  HudManager.cpp  HudManager.h
